SCB-1321 Optimize Benchmark JVM Parameters